objects/WT_Case_Note__c.object
<CustomObject>
    <description>Created as a part of DBSFCRM-593</description>
    <fields>
        <fullName>WT_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of DBSFCRM-593</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Notes</relationshipLabel>
        <relationshipName>Case_Notes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Email_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>WT_MSD_Record_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>MSD Record ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Note_Category__c</fullName>
        <label>Note Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Called Customer</fullName>
                </value>
                <value>
                    <fullName>E-mailed Customer</fullName>
                </value>
                <value>
                    <fullName>Memo</fullName>
                </value>
                <value>
                    <fullName>Status Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Notes__c</fullName>
        <description>Created as a part of DBSFCRM-593</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WT_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as a part of DBSFCRM-593</description>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Type__c</fullName>
        <description>Created as a part of DBSFCRM-593</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>WT_Note_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Resolving</fullName>
                </value>
                <value>
                    <fullName>Waiting for Customer</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                    <isActive>false</isActive>
                    <label>Fulfillment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case Note</label>
    <nameField>
        <displayFormat>Note-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>WT_Note_Cannot_be_Created</fullName>
        <active>true</active>
        <description>Created as part of story- 419</description>
        <errorConditionFormula>AND(
$Setup.WT_Switch_Settings__c.WT_Is_Validation_Rule_Active__c,NOT(OR($Profile.Name = &apos;WT Business Administrator&apos; , $Profile.Name = &apos;WT Technical Administrator&apos;, $Profile.Name = &apos;System Administrator&apos; ) ),
$UserRole.Name != &apos;Complaint Manager&apos;,
ISPICKVAL(WT_Case__r.Status,&apos;Awaiting Approval&apos;),
WT_Case__r.RecordType.Name =&apos;Compliance Complaint&apos;)</errorConditionFormula>
        <errorMessage>Only Compliant Manager can Create or Edit Notes for Compliance Complaint case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WT_Notes_Required</fullName>
        <active>false</active>
        <description>created as part of DBSFCRM-783</description>
        <errorConditionFormula>AND(
 ISPICKVAL( WT_Note_Category__c , &apos;Status Update&apos;),
 OR(
    ISPICKVAL(  WT_Type__c , &apos;Resolving&apos;),
    ISPICKVAL(  WT_Type__c , &apos;Waiting For Customer&apos;),
    ISPICKVAL(  WT_Type__c , &apos;Cancellation&apos;)
   ),
 ISBLANK(WT_Notes__c) 
)</errorConditionFormula>
        <errorDisplayField>WT_Notes__c</errorDisplayField>
        <errorMessage>Notes is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WT_Restrict_Note_Category_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $Setup.WT_Switch_Settings__c.WT_Is_Validation_Rule_Active__c ,
 ISCHANGED( WT_Note_Category__c ) )</errorConditionFormula>
        <errorDisplayField>WT_Note_Category__c</errorDisplayField>
        <errorMessage>Note Category Cannot Be Changed Once Note is Created</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WT_Restrict_Send_Email_CCPA</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $Setup.WT_Switch_Settings__c.WT_Is_Validation_Rule_Active__c ,
 WT_Send_Email__c ,
 WT_Case__r.RecordType.DeveloperName == &apos;WT_CCPA&apos;
)</errorConditionFormula>
        <errorDisplayField>WT_Send_Email__c</errorDisplayField>
        <errorMessage>Send Email is not available for CCPA Case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WT_Restrict_Send_Email_Compliance_Case</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $Setup.WT_Switch_Settings__c.WT_Is_Validation_Rule_Active__c ,
 WT_Send_Email__c ,
 WT_Case__r.RecordType.DeveloperName == &apos;WT_Compliance_Complaint&apos;
)</errorConditionFormula>
        <errorDisplayField>WT_Send_Email__c</errorDisplayField>
        <errorMessage>Send Email is not available for Compliance Case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WT_Restrict_Status_Update_Values_CCPA</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $Setup.WT_Switch_Settings__c.WT_Is_Validation_Rule_Active__c,
WT_Case__r.RecordType.DeveloperName == &apos;WT_CCPA&apos;,
ISPICKVAL(WT_Type__c ,&apos;Waiting for Customer&apos;) 
)</errorConditionFormula>
        <errorDisplayField>WT_Type__c</errorDisplayField>
        <errorMessage>Waiting for Customer Status is not available for CCPA Case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WT_Restrict_Status_Values_ComplianceCase</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $Setup.WT_Switch_Settings__c.WT_Is_Validation_Rule_Active__c,
WT_Case__r.RecordType.DeveloperName == &apos;WT_Compliance_Complaint&apos;,
ISPICKVAL(WT_Type__c ,&apos;Waiting for Customer&apos;) 
)</errorConditionFormula>
        <errorDisplayField>WT_Type__c</errorDisplayField>
        <errorMessage>Waiting for Customer Status is not available for Compliance Case</errorMessage>
    </validationRules>
</CustomObject>